{
  "version": 4,
  "terraform_version": "1.1.8",
  "serial": 57,
  "lineage": "863d87da-8dc1-c942-743f-af3ae883e6b5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "ac1-tg-attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:988859077923:targetgroup/ac1-tg/92879797c53e5128-20220503005705346900000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:988859077923:targetgroup/ac1-tg/92879797c53e5128",
            "target_id": "i-0587201200f87f8df"
          },
          "dependencies": [
            "aws_instance.ac1-instance",
            "aws_lb_target_group.ac1-tg",
            "aws_security_group.ac1-sg",
            "aws_subnet.ac1-private-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "ac1-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:988859077923:route-table/rtb-0623a2895c6022823",
            "default_route_table_id": "rtb-0623a2895c6022823",
            "id": "rtb-0623a2895c6022823",
            "owner_id": "988859077923",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0adde57fc97437059",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "default route table"
            },
            "tags_all": {
              "Name": "default route table"
            },
            "timeouts": null,
            "vpc_id": "vpc-004ec1b5809fd2383"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ac1-gw",
            "aws_vpc.vpc-ac1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ac1-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03ededff12e34e59e",
            "arn": "arn:aws:ec2:us-east-1:988859077923:instance/i-0587201200f87f8df",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0587201200f87f8df",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0bc206e369b3a89a6",
            "private_dns": "ip-172-16-1-113.ec2.internal",
            "private_ip": "172.16.1.113",
            "public_dns": "ec2-54-208-73-63.compute-1.amazonaws.com",
            "public_ip": "54.208.73.63",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b66df6e3ecbe090f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d9d6898e6d5aa3b1",
            "tags": {
              "Name": "ac1-instance",
              "terraform": "True"
            },
            "tags_all": {
              "Name": "ac1-instance",
              "terraform": "True"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-035feffc03fdc83e3"
            ]
          },
          "dependencies": [
            "aws_security_group.ac1-sg",
            "aws_subnet.ac1-private-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ac1-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:988859077923:internet-gateway/igw-0adde57fc97437059",
            "id": "igw-0adde57fc97437059",
            "owner_id": "988859077923",
            "tags": {
              "Name": "terraform-ac1-gw"
            },
            "tags_all": {
              "Name": "terraform-ac1-gw"
            },
            "vpc_id": "vpc-004ec1b5809fd2383"
          },
          "dependencies": [
            "aws_vpc.vpc-ac1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ac1-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:988859077923:loadbalancer/app/ac1-lb/3920a1fff18ece30",
            "arn_suffix": "app/ac1-lb/3920a1fff18ece30",
            "desync_mitigation_mode": "defensive",
            "dns_name": "ac1-lb-1202239422.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:988859077923:loadbalancer/app/ac1-lb/3920a1fff18ece30",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ac1-lb",
            "security_groups": [
              "sg-048f57d9fee6950ce"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0622f7f01af8d4191"
              },
              {
                "subnet_id": "subnet-0d9d6898e6d5aa3b1"
              }
            ],
            "subnets": [
              "subnet-0622f7f01af8d4191",
              "subnet-0d9d6898e6d5aa3b1"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-004ec1b5809fd2383",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.ac1-lb-sg",
            "aws_subnet.ac1-private-subnet",
            "aws_subnet.ac1-private-subnet-2",
            "aws_vpc.vpc-ac1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ac1-listner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:988859077923:listener/app/ac1-lb/3920a1fff18ece30/46f603f75c789c17",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:988859077923:targetgroup/ac1-tg/92879797c53e5128",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:988859077923:listener/app/ac1-lb/3920a1fff18ece30/46f603f75c789c17",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:988859077923:loadbalancer/app/ac1-lb/3920a1fff18ece30",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ac1-lb",
            "aws_lb_target_group.ac1-tg",
            "aws_security_group.ac1-lb-sg",
            "aws_subnet.ac1-private-subnet",
            "aws_subnet.ac1-private-subnet-2",
            "aws_vpc.vpc-ac1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "ac1-listener-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:988859077923:targetgroup/ac1-tg/92879797c53e5128",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:988859077923:listener-rule/app/ac1-lb/3920a1fff18ece30/46f603f75c789c17/ee75f2b63818e792",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/var/www/html/index.html"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:988859077923:listener-rule/app/ac1-lb/3920a1fff18ece30/46f603f75c789c17/ee75f2b63818e792",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:988859077923:listener/app/ac1-lb/3920a1fff18ece30/46f603f75c789c17",
            "priority": 100,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ac1-lb",
            "aws_lb_listener.ac1-listner",
            "aws_lb_target_group.ac1-tg",
            "aws_security_group.ac1-lb-sg",
            "aws_subnet.ac1-private-subnet",
            "aws_subnet.ac1-private-subnet-2",
            "aws_vpc.vpc-ac1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ac1-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:988859077923:targetgroup/ac1-tg/92879797c53e5128",
            "arn_suffix": "targetgroup/ac1-tg/92879797c53e5128",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:988859077923:targetgroup/ac1-tg/92879797c53e5128",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ac1-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-004ec1b5809fd2383"
          },
          "dependencies": [
            "aws_vpc.vpc-ac1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ac1-lb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:988859077923:security-group/sg-048f57d9fee6950ce",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-048f57d9fee6950ce",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-ac1-lb-sg",
            "name_prefix": "",
            "owner_id": "988859077923",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-ac1-lb-sg"
            },
            "tags_all": {
              "Name": "terraform-ac1-lb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-004ec1b5809fd2383"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-ac1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ac1-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:988859077923:security-group/sg-035feffc03fdc83e3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-035feffc03fdc83e3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-ac1-sg",
            "name_prefix": "",
            "owner_id": "988859077923",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-ac1-sg"
            },
            "tags_all": {
              "Name": "terraform-ac1-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-004ec1b5809fd2383"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-ac1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ac1-private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:988859077923:subnet/subnet-0d9d6898e6d5aa3b1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d9d6898e6d5aa3b1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "988859077923",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-ac1-private-subnet"
            },
            "tags_all": {
              "Name": "terraform-ac1-private-subnet"
            },
            "vpc_id": "vpc-004ec1b5809fd2383"
          },
          "dependencies": [
            "aws_vpc.vpc-ac1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ac1-private-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:988859077923:subnet/subnet-0622f7f01af8d4191",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0622f7f01af8d4191",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "988859077923",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-ac1-private-subnet-2"
            },
            "tags_all": {
              "Name": "terraform-ac1-private-subnet-2"
            },
            "vpc_id": "vpc-004ec1b5809fd2383"
          },
          "dependencies": [
            "aws_vpc.vpc-ac1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-ac1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:988859077923:vpc/vpc-004ec1b5809fd2383",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-072a94616654e3564",
            "default_route_table_id": "rtb-0623a2895c6022823",
            "default_security_group_id": "sg-065ca45890107a5b7",
            "dhcp_options_id": "dopt-06b4eeabfa9cab220",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-004ec1b5809fd2383",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0623a2895c6022823",
            "owner_id": "988859077923",
            "tags": {
              "Name": "terraform-vpc-ac1"
            },
            "tags_all": {
              "Name": "terraform-vpc-ac1"
            }
          }
        }
      ]
    }
  ]
}